<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BooksHunter</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcome_message">We will help you to find books you love.</string>
    <string name="suggestions">Suggestions</string>
    <string name="search">Search</string>
    <string name="display_name">Display Name</string>
    <string name="display_name_description">Enter your name here.</string>
    <string name="cache_description">Cache my results.</string>
    <string name="genres">Genres List</string>
    <string name="genres_description">Select your book genres</string>
    <string name="title_activity_suggetions">Suggetions</string>
    <string name="wants_to_read">Wants To Read</string>
    <string name="already_read">Already Read</string>
    <string name="guest">Guest</string>
    <string name="title_activity_search">Search Book</string>
    <string name="search_title">Search Books</string>
    <string name="search_hint">Title/Author/Description</string>
    <string name="library_icon">Library</string>
    <string name="settings_icon">Settings</string>
    <string name="title_activity_library">Library </string>
    <string name="title_section1">Already Read</string>
    <string name="title_section2">Wants To Read</string>
    <string name="library_remove">Remove From Library</string>
    <string name="select_genres">Please select your genres from settings first</string>
    <string name="wants_to_read_add">added to Wants To Read list</string>
    <string name="already_read_add">added to Already Read list</string>
    <string name="already_library">Already Read Books List</string>
    <string name="wants_to_library">Wants To Read Books List</string>

</resources>
