<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >        

        <EditText
            android:id="@+id/searchText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="@string/search_hint"
            android:ems="10" />
        
        <Button
            android:id="@+id/searchButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/search" />

        

    </LinearLayout>

    <ListView
        android:id="@+id/searchListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:divider="@null"
        android:listSelector="@android:color/transparent" 
        android:headerDividersEnabled="true"
        android:footerDividersEnabled="true" 
    	android:dividerHeight="10dp"
    	android:cacheColorHint="@android:color/transparent">
        
    </ListView>

</LinearLayout>
